# greenideas

./: .gitmodules  MANIFEST.in  README.md  package-lock.json  pyproject.toml
.github/prompts/: copilot.prompt.md
.github/workflows/: python-app.yml  python-publish.yml
docs/: api_reference.md  grammar_concepts.md  index.md  installation.md  twaddle_formatting.md  usage.md
greenideas/: __main__.py  exceptions.py  expansion_spec.py  grammar.py  grammar_engine.py  grammar_rule.py  pos_node.py  pos_types.py  tree_to_twaddle.py
greenideas/attributes/: animacy.py  attribute_set.py  attribute_type.py  case.py  propagation.py  propagation_rule.py  tense.py  valency.py
greenideas/parts_of_speech/: default_english_pos_attributes.py  pos_node.py  pos_type_attributes.py  pos_types.py
greenideas/rules/: default_rules.py  expansion_spec.py  grammar_rule.py  grammar_ruleset.py  source_spec.py
greenideas/rules/default_english_rules/: adjP_expansions.py  advP_expansions.py  auxP_expansions.py  default_rules.py  npNodet_expansions.py  np_expansions.py  pp_expansions.py  relClause_expansions.py  s_expansions.py  vpAfterModal_expansions.py  vp_expansions.py
greenideas/twaddle/: formatting_context.py  twaddle_formatter.py
greenideas/twaddle/default_formatters/: adj_formatting_handler.py  (+19 more)
tests/: test_default_twaddle_formatters.py  test_failures.py  test_grammar_abstractions.py  test_grammar_agreement.py  test_grammar_engine.py  test_grammar_rules.py  test_posnode_relevant_attributes.py  test_tree_to_twaddle.py  test_twaddle_formatter.py  test_twaddle_tag_builder.py
(+20 files in other folders)
