[tool.poetry]
name = "green-ideas"
version = "0.1.0"
description = "A package to generate grammatically valid but semantically nonsensical English sentences."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/green-ideas"
repository = "https://github.com/yourusername/green-ideas"
keywords = ["grammar", "sentence generation", "nonsense", "twaddle"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"